[package]
name = "vpn-node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
reqwest = "0.12.24"
rsa = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[profile.dev.package.num-bigint-dig]
opt-level = 3
